[package]
name = "crispycraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-mesh = "0.1"
wgpu = "0.12"
winit = "0.26"
winit_input_helper = "0.11"
pollster = "0.2"
bytemuck = { version = "1.7", features = ["derive"] }
cgmath = "0.18"